app/webroot/assets/css/base.css
/* ... */
.bagel__ratio .bagel__line-1 span {
  width: 300px;
}
.finance--fund .bagel__ratio .bagel__line-1 span {
  width: 280px;
}
.bagel__ratio .bagel__line-2 span {
  width: 160px;
}
.finance--fund .bagel__ratio .bagel__line-2 span {
  width: 360px;
}
.bagel--s .bagel__ratio .bagel__line-2 span {
  width: 170px;
}
.finance--fund .bagel--s .bagel__ratio .bagel__line-2 span {
  width: 350px;
}
.bagel__ratio .bagel__line-3 span {
  width: 148px;
}
.bagel--s .bagel__ratio .bagel__line-3 span {
  width: 168px;
}

.bagel__circle {
	background-color: white;
  width: 4px;
	height: 4px;
	border-radius: 2px;

  position: absolute;
  bottom: 0;
  transform: translate(-50%, 50%);
}
.finance--fund .bagel__circle {
  background-color: var(--color-black);
}

.bagel__info {
  margin-left: 40px;
  width: 440px;
}
.bagel__info .bagel__line-1,
.bagel__info .bagel__line-2 {
  border-bottom: 1px solid white;
}
.finance--fund .bagel__info .bagel__line-1,
.finance--fund .bagel__info .bagel__line-2,
.finance--fund .bagel__info .bagel__line-3 {
  border-bottom: 1px solid var(--color-black);
}
.bagel__label {
  max-width: 300px;
}
.bagel__amount {
  right: 0;
  font-weight: bold;
}
.bagel__line-3 .bagel__label,
.bagel__line-4 .bagel__label {
  font-weight: bold;
}
.finance--fund .bagel__line-3 .bagel__label {
  font-weight: normal;
}

/* Responsive 1100px
---------------------------------------------------------------- */
@media (max-width: 1100px) {
  .cp {
    padding: 30px;
  }
  .cp--nav-zone {
    padding-top: 140px;
  }
  .home__intro {
    padding-top: 1050px;
    padding-bottom: 120px;
  }
  .review__intro {
    padding-top: 200px;
  }
  .cp--6x-top {
    padding-top: 240px;
  }
  .cp--6x-bottom {
    padding-bottom: 240px;
  }
  .quote {
    margin: 60px 0 80px 0;
  }
  .ft__col-val {
    padding-left: 15px;
    padding-right: 15px;
  }

  .bagel {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
  .bagel__image {
    position: relative;
  }
  .bagel__ratio {
    width: auto;
  }
  .finance--fund .bagel__ratio > div,
  .bagel__ratio > div {
    border-bottom: 1px solid var(--color-black);
  }
  .bagel__ratio span {
    width: auto !important;
    border: none;
  }
  .finance--fund .bagel__ratio span {
    border: none;
  }
  .bagel__circle {
    display: none;
  }
  .bagel__info {
    width: 400px;
    margin-left: 20px;
  }
  .bagel__line-1 span,
  .bagel__line-2 span,
  .bagel__line-3 span,
  .bagel__line-4 span {
    position: relative;
  }
  .bagel__line-1,
  .bagel__line-2,
  .bagel__line-3,
  .bagel__line-4 {
    height: 50px;
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
  }
}

/* Responsive 550px
---------------------------------------------------------------- */
@media (max-width: 550px) {
  .cp {
    padding: 10px;
  }
  .cp--center-section {
    padding: 40px 10px;
  }
  .cp--nav-zone {
    padding-top: 140px;
  }
  .cp--upped-section {
    padding: 60px 20px 40px 20px;
  }

  .swiper-button-next,
  .swiper-button-prev {
    width: 25px;
    height: 50px;
  }
  .swiper-button-next {
    right: 0;
  }
  .swiper-button-prev {
    left: 0;
  }
  .swiper-slide {
    padding: 0 35px;
  }

  .home__intro {
    padding-top: 1050px;
    padding-bottom: 60px;
  }
  .home__intro h1 {
    margin-bottom: 18px;
  }
  .home__intro p {
    margin-bottom: 20px;
  }
  .home__intro .figs {
    padding-top: 0;
    flex-wrap: wrap;
  }
  .home__intro .fig {
    width: 100%;
  }
  .home__intro .fig:first-of-type {
    margin: 0;
    padding-bottom: 20px;
  }
  .finance-banner {
    padding: 160px 10px;
  }
  .home__bagels {
    width: 200px;
    margin-left: -100px;
    height: 20%;
  }
  .home__bagel--1,
  .home__bagel--2 {
    width: 540px;
    height: 540px;
  }
  .figs .fig {
    width: 100%;
  }
  .review__intro {
    padding-top: 120px;
  }
  .jb-hsplit-list .jb-hsplit {
    margin: 40px;
    width: 430px;
  }
  .jb-hsplit__cover {
    height: 75vw;
  }
  .jb-hsplit__content {
    padding: 20px 40px 40px 20px;
  }
  .cp--6x-top {
    padding-top: 120px;
  }
  .cp--6x-bottom {
    padding-bottom: 120px;
  }
  .finance .section__body {
    padding-top: 140px;
  }
  .h--alpha {
    font-size: 36px;
  }
  .h--beta {
    font-size: 18px;
  }
  .t--gamma {
    font-size: 18px;
  }
  .t--gamma-serif {
    font-size: 18px;
  }
  .t--beta {
    font-size: 22px;
  }
  .t--delta {
    font-size: 12px;
  }
  .t--delta-serif {
    font-size: 12px;
  }
  .ft td, .ft th {
    font-size: 12px;
  }
  .ft__col-key {
    padding-right: 10px;
  }
  .ft__col-val {
    min-width: 100px;
    padding-left: 10px;
    padding-right: 10px;
  }

  .bagel__info {
    width: 280px;
    margin-left: 10px;
  }


  .main-footer {
    padding: 20px 0;
  }
  .main-footer__info-1 {
    width: inherit;
    min-width: inherit;
  }
}

@media (max-width: 400px) {
  .bagel__ratio {
    display: none;
  }
  .bagel__info {
    margin: 0;
  }
}

